books/python-oop/src/examples/oop/abc/with_abc3_base.out
Traceback (most recent call last):
  File "with_abc3_base.py", line 3, in <module>
    b = Base('Boss')
TypeError: Can't instantiate abstract class Base with abstract methods bar, foo
