books/python-oop/src/examples/oop/abc/with_abc3_base.py
from with_abc3 import Base

b = Base('Boss')
